avbin (7-1) unstable; urgency=low

  [ Andrew Straw ]
  * Initial packaging. (Closes: #523809)

  [ Matthew Johnson ]
  * Lintian tidyups
  * Install header and docs
  * Add watch file

 -- Matthew Johnson <mjj29@debian.org>  Sat, 02 May 2009 19:45:56 +0100