@@ -6,5 +6,9 @@ build:
 	dh_auto_configure
 	dh build --after configure
 
+clean:
+	dh clean
+	rm -f config.guess config.sub ltmain.sh install-sh missing depcomp aclocal.m4 configure config.h.in Makefile.in src/Makefile.in
+
 %:
 	dh $@
