@@ -7,5 +7,6 @@ avbin (7-1) unstable; urgency=low
   * Lintian tidyups
   * Install header and docs
   * Add watch file
+  * Fix clean target for double-builds 
 
- -- Matthew Johnson <mjj29@debian.org>  Sat, 02 May 2009 19:45:56 +0100
+ -- Matthew Johnson <mjj29@debian.org>  Mon, 04 May 2009 00:24:42 +0100
